css/style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Oxygen&family=Oxygen+Mono&family=Quicksand:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital@1&display=swap');

*,*::after,*::before{
    box-sizing: border-box;
}

html{
    box-sizing: inherit;
}

body {
    margin:0;
    padding: 0;
    font-family: 'Red Hat Display', sans-serif;
    color: black;
    background-color: #E4EBF2;
}

h1 {
    text-align: center;
    margin: 11rem 0 2rem 0;
    text-decoration: underline;
    text-decoration-color: #A6874E;
    text-decoration-style: double;
}

nav {
    /*max-width: 1200px;
    margin: 0 auto;*/
}

nav ul {
    display: flex;
    gap: 1rem;
    list-style-type: none;
    justify-content: center;
    padding: 0;    
}

.side-modal{
    display: none;
    width:70%;
    background-color: white;
    border: 2px solid gray;
    height:100%;
    position: fixed;
    left:0;
    top:0;
    z-index:2;
}

.menu-bar nav li a {
    text-decoration: none;
    font-family: 'Quicksand', sans-serif;
    color: #A6874E;
    font-size:1.2rem;
}

.menu-section{
    max-width: 1200px;
    margin: 0 auto;
}

.menu-section > div {
    border: 1px solid gray;
    width: min-content;
    margin: 0 auto 20px auto;
    box-shadow: 10px 10px 10px lightslategrey;
}

.item-header {
    margin:0;   
}

.item-image{
    width: 300px;
    border:4px solid #A6874E;
}

/*.item-container {
    position: relative;
}*/

.item-image-container {
    text-align: center;
    display: flex;
    justify-content: space-between;
    gap: 0.6rem;
    flex-basis:40%;
    border: 1px solid gray;
    /*box-shadow: 10px 5px 5px lightslategray;*/
}
.item-text p:nth-of-type(1), .item-text p:nth-of-type(2){
    margin: 0;
    font-size: 1.2rem;
}

.item-text{
    display: flex;
     color: #390D02;    
    align-items: flex-start;
     padding-top: 20px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.item-desc{
    padding: 0 1rem;
}

.item-desc p{
     text-align: center;
}

.active {
    display: flex;
 }

.close-button {
    float: right;
    margin: 1rem;
    border: 2px solid gray;
    border-radius: 6.2rem;
    width: 1.8rem;
    height: 1.8rem;
    text-align: center;
}

.toast_message{
    display: none;
    position: fixed;
    top:20%;
    left: 50%;
    transform: translate(-50%,-50%);  
    background-color:darkgreen;
    color:white;
    padding: 1.2rem;
    animation-name: toast-message-loading;
    animation-duration: 1s;
    width: max-content;
  }

@keyframes toast-message-loading {
    from{opacity: 0;}
    to{opacity: 1;}
}

.item-order-quantity{
    background-color: maroon;
    color: white;
    width: 100%;
    text-align: center;
}

.order-modal-header__back{
    display: none;
}

.order-modal-close{
    display: none   ;
}

.order-summary-modal__container{
    display: none;
    width: 100%;
    height: 100%;
    position: fixed;
    top:0;
    left:0;
    background-color: rgb(0,0,0,0.9);
}

.order-summary-modal__content{
    background-color: white;
    width: 90%;
    position: fixed;
    top:50%;
    left:50%;
    transform: translate(-50%,-50%);
}

.order-summary-modal__content > h4 {
    font-size: larger;
    text-align: center;
    border-bottom-style: dashed;
    padding-bottom: 1rem;
    border-bottom-color: maroon;
}

.order-summary-modal__content > span {
    float: right;
    padding: 10px;
    font-size: xx-large;
    color: lightgray;
    cursor: pointer;
}

.order-summary-row{
    display: flex;
    gap: 3.2rem;
    justify-content: center;
    margin: 0 1.2rem;
}

.order-summary-header{
    width: 60%;
    margin: 5% auto;
    display: flex;
    gap: 1.2rem;
    justify-content: center;
    padding-left: 1rem;
    font-weight: bolder;
  }

.order-summary-details{
    border: 3px solid #A6874E;
    /*width: 60%;*/
    margin: 5%;
    padding: 1.2rem 0;
}

.order-summary-row{
    display: flex;
    gap: 0.7rem;
    justify-content: center;
    margin: 1.2rem;
}

.order-summary-header div:nth-of-type(1){
    flex-basis: 40%;
    /*text-align: left;*/text-align: center;
}
.order-summary-row div:nth-of-type(1){
    flex-basis:20%;
}

.order-summary-row div:nth-of-type(2){
    flex-basis:20%;
}

.order-summary-row div:nth-of-type(3){
    flex-basis:10%;
}

.order-summary-row div:nth-of-type(4){
    flex-basis:10%;
}

.order-modal-header__back{
    display: none;
}

.order-modal-close{
    display: none;
}

.edit, .delete {
    width: 12px;
}

footer{
    position: fixed;
    bottom: 0;
    right: 0;
    left: 0;
    background: linear-gradient(90deg, rgba(241,232,193,1) 9%, rgba(166,135,78,1) 85%);
    margin-top: 1.2rem;
 }

.footer-list{
    display: flex;
    list-style-type: none;
    gap:2rem;
    justify-content: center;
    align-items: center;
    padding:0;
    margin: 0;
}

.footer-list-item{
    flex-basis:10%;
}

.footer-list-item__image{
     fill: white;
}
.footer-text{
    display: none;
}

.footer-section{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}
.footer-list{
    justify-content: center;
    flex-basis: 50%;
}

.footer-list-item__image{
    width: 60%;
 }

@media(min-width:910px){
    h1 {
        padding: 1rem 0 0 0 ;
        margin: 10rem 0 3rem 0;
    }

    .menu-bar nav {
        margin-bottom: 4rem;
    }

    .menu-bar nav li a {
        font-size: 1.2rem;
        padding:8px;
        background-color: white;
        box-shadow: 2px 2px 3px black;
    }

    .menu-bar nav li a:hover{
        color: white;
        background-color: #390D02;
    }
    
    .menu-section{
        display: flex;
        gap:5rem;
        justify-content: center;
        flex-wrap: wrap;
        margin-bottom: 5rem;
    }

    .menu-section > div{
        border: none;
        margin:0;
        box-shadow: none;
    }
    
    .item-container{
        display: flex;
        justify-content: space-between;
        gap: 0.6rem;
        flex-basis:40%;
        border: none;
        box-shadow: 10px 5px 5px lightslategray;
    }

    .item-container:hover{
        box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.673);
    }

    .item-detail-container{
        flex-basis: 50%;
    }

    .item-image-container{
         height: 220px;
        width:250px;
        flex-basis: auto;
        border: none;
     }

    .item-image{
        width: 100%;
        height: 100%;
    }

    .item-text{
         border-bottom: 1px solid darkgray;
         padding:0;
         justify-content: space-between;
         flex-direction: row;
         display: flex;
    }

    .item-text p:first-of-type{
        font-size: 1.1rem;
        font-weight: bold;
        color: black;
        margin: 0;
        margin: 5px;
    }

    .item-text p:nth-of-type(2){
        font-size: 1rem;
        font-weight: bolder;
        color: #A6874E;
        margin: 0;
        margin: 5px;
    }

    .item-desc{
        width: 200px;
        padding: 0;
     }

     .item-desc p {
         padding: 0 5px;
         text-align: left;
      }

      .item-order-quantity{
         padding: 6px;
         background-color: #E4EBF2;
         margin: 0;
         width: auto;
       }
 
    .side-modal-container{
          display:none;
    }
  
    .toast_message{
        display: none;
        position: fixed;
        top:8%;
        left: 50%;  
    }

    .order-modal-header{
        display:flex;
        flex-direction: column;
    }

    .order-modal-header__back{
        float: left;
        font-size: 2rem;
        color: #ccc;
        cursor: pointer;
    }

    .order-modal-header__back:hover,
    .order-modal-close:hover{
        color: #A6874E;
    }
    .order-summary-modal__container{
        display: none;
        width: 100%;
        height: 100%;
        position: fixed;
        top:0;
        left:0;
        background-color: rgb(0,0,0,0.9);
    }

    .order-summary-modal__content{
        width: 60%;
    }

    .order-summary-modal__content > h4 {
        font-size: larger;
        text-align: center;
        border-bottom-style: dashed;
        padding-bottom: 1rem;
        border-bottom-color: maroon;
    }

    .order-summary-modal__content > span {
        float: right;
        padding: 10px;
        font-size: xx-large;
        color: lightgray;
        cursor: pointer;
    }

    .order-summary-row{
        display: flex;
        gap: 3.2rem;
        justify-content: center;
        margin: 0 1.2rem;
    }

    .order-summary-header{
        width: 60%;
        margin: 5% auto;
        display: flex;
        gap: 1.2rem;
        justify-content: center;
        padding-left: 1rem;
        font-weight: bolder;
      }

    .order-summary-details{
        border: 3px solid #A6874E;
        /*width: 60%;*/
        margin: 5%;
        padding: 1.2rem 0;
    }

    .order-summary-header div:nth-of-type(1){
        flex-basis: 40%;
        /*text-align: left;*/text-align: center;
    }
    .order-summary-row div:nth-of-type(1){
        flex-basis:35%;
    }

    .order-summary-row div:nth-of-type(2){
        flex-basis:auto;
    }
    
    .order-summary-row div:nth-of-type(3){
        flex-basis:auto;
    }
    
    .order-summary-row div:nth-of-type(4){
        flex-basis:auto;
    }
    
    .order-modal-header__back{
        display: block;
    }
    
    .order-modal-close{
        display: block   ;
    }

    .edit,.delete{
        width: 16px;
    }

    .edit:hover,.delete:hover{
        cursor: pointer;
    }

    .footer-section{
            display: flex;
            justify-content: space-evenly;
            align-items: center;
       }

        .footer-list{
            justify-content: flex-start;
            gap:1rem;
            flex-basis: 50%;
        }

        .footer-list-item__image{
            width: 60%;
         }

         .footer-list-item__image:hover{
            fill: maroon;
         }

         .footer-text{
             color: white;
             display: block;
             font-family: 'Barlow', sans-serif;
         }
}

